grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.assertion,
          $.function_definition,
          $.function_declaration,
          $.enum,
          $.enum_struct,
          $.typedef,
          $.typeset,
          $.functag,
          $.funcenum,
          $.methodmap,
          $.struct,
          $.struct_declaration,
          $.global_variable_declaration,
          $.old_global_variable_declaration,
          $.hardcoded_symbol,
          $.alias_declaration,
          $.alias_assignment,
        ),
      ),

    // Preprocessor
    function_definition: ($) =>
      choice(
        seq(
          field("visibility", optional($.visibility)),
          field("returnType", seq($.type, repeat($.dimension))),
          field("name", $.identifier),
          field("parameters", $.parameter_declarations),
          field("body", $.block),
        ),
        seq(
          field("visibility", optional($.visibility)),
          field("returnType", optional($.old_type)),
          field("name", $.identifier),
          field("parameters", $.parameter_declarations),
          field("body", $._statement),
        ),
      ),

    function_declaration: ($) =>
      seq(
        field("kind", $.function_declaration_kind),
        field(
          "returnType",
          optional(choice(seq($.type, optional($.dimension)), $.old_type)),
        ),
        field("name", $.identifier),
        field("parameters", $.parameter_declarations),
        optional(seq("=", $.identifier)), // native float __FLOAT_MUL__(float a, float b) = FloatMul;
        $._semicolon,
      ),

    parameter_declarations: ($) =>
      seq(
        "(",
        commaSep(choice($.parameter_declaration, $.rest_parameter)),
        ")",
      ),

    parameter_declaration: ($) =>
      seq(
        field("storage_class", optional($.variable_storage_class)),
        choice(
          // Old
          seq(
            optional(field("type", $.old_type)),
            field("name", $.identifier),
            repeat(choice($.dimension, $.fixed_dimension)),
          ), // foo | foo[] | Float: foo
          seq("&", field("name", $.identifier)), // &foo
          seq(field("type", seq("&", $.old_type)), field("name", $.identifier)), // &Float: foo
          // New
          seq(field("type", $.type), "&", field("name", $.identifier)), // float &foo
          seq(field("type", $.array_type), field("name", $.identifier)), // float[] foo
          seq(
            field("type", $.type),
            field("name", $.identifier),
            repeat(choice($.dimension, $.fixed_dimension)),
          ), // float foo | float foo[]
        ),
        optional(seq("=", field("defaultValue", $._expression))),
      ),

    variable_declaration_statement: ($) =>
      /* Use left precedence to resolve conflict with variable
      declarations in for loops
       */
      prec.left(
        choice(
          // Action[] actions = new Action[32];
          seq(
            field("type", $.type),
            repeat1($.dimension),
            commaSep1($.dynamic_array_declaration),
            optional($._semicolon),
          ),
          // Action actions[32];
          // Action action;
          seq(
            optional($.visibility),
            optional($.variable_storage_class),
            field("type", $.type),
            commaSep1($.variable_declaration),
            optional($._semicolon),
          ),
        ),
      ),

    variable_declaration: ($) =>
      seq(
        field("name", $.identifier),
        repeat(choice($.dimension, $.fixed_dimension)),
        optional(seq("=", field("initialValue", $._expression))),
      ),

    old_variable_declaration_statement: ($) =>
      prec.left(
        seq(
          choice(
            seq(choice("new", "decl"), optional($.variable_storage_class)),
            $.variable_storage_class,
            seq($.visibility, optional($.variable_storage_class)),
          ),
          commaSep1($.old_variable_declaration),
          $._semicolon
        ),
      ),

    // Workaround for mandatory semicolon in for loops
    old_variable_declaration: ($) =>
      seq(
        field("type", optional($.old_type)),
        field("name", $.identifier),
        repeat(choice($.dimension, $.fixed_dimension)),
        field("initialValue", optional(seq("=", $._expression))),
      ),

    enum: ($) =>
      seq(
        "enum",
        // Disjoint shapes avoid a self-conflict between tag and name on `enum Name:`.
        optional(
          choice(
            seq(
              field("tag", seq($.identifier, token.immediate(":"))),
              field("name", seq($.identifier, optional(token.immediate(":")))),
            ),
            field("name", seq($.identifier, optional(token.immediate(":")))),
          ),
        ),
        optional(
          seq(
            "(",
            choice(
              "=",
              "+=",
              "-=",
              "*=",
              "/=",
              "|=",
              "&=",
              "^=",
              "~=",
              "<<=",
              ">>=",
            ),
            $._expression,
            ")",
          ),
        ),
        field("entries", $.enum_entries),
        optional($._semicolon),
      ),

    enum_entries: ($) => seq("{", commaSep($.enum_entry), optional(","), "}"),

    enum_entry: ($) =>
      seq(
        field(
          "type",
          optional(
            seq(choice($.builtin_type, $.identifier), token.immediate(":")),
          ),
        ),
        field("name", $.identifier),
        optional($.fixed_dimension),
        field("value", optional(seq("=", $._expression))),
      ),

    enum_struct: ($) =>
      seq(
        "enum",
        "struct",
        field("name", $.identifier),
        "{",
        repeat(choice($.enum_struct_field, $.enum_struct_method)),
        "}",
      ),

    enum_struct_field: ($) =>
      seq(
        field("type", $.type),
        field("name", $.identifier),
        optional($.fixed_dimension),
        $._semicolon,
      ),

    enum_struct_method: ($) =>
      seq(
        field("returnType", seq($.type, repeat($.dimension))),
        field("name", $.identifier),
        field("parameters", $.parameter_declarations),
        field("body", $.block),
      ),

    methodmap: ($) =>
      seq(
        "methodmap",
        field("name", $.identifier),
        optional(
          choice(seq("<", field("inherits", $.identifier)), "__nullable__"),
        ),
        "{",
        repeat(
          choice(
            $.methodmap_alias,
            $.methodmap_native,
            $.methodmap_native_constructor,
            $.methodmap_native_destructor,
            $.methodmap_method,
            $.methodmap_method_constructor,
            $.methodmap_method_destructor,
            $.methodmap_property,
          ),
        ),
        "}",
        optional($._semicolon),
      ),

    methodmap_method: ($) =>
      seq(
        $.methodmap_visibility,
        optional("static"),
        field("returnType", seq($.type, repeat($.dimension))),
        field("name", $.identifier),
        field("parameters", $.parameter_declarations),
        field("body", $.block),
      ),

    type: ($) => choice($.builtin_type, $.identifier, $.any_type),

    dimension: ($) => seq("[", "]"),

    fixed_dimension: ($) =>
      seq(
        "[",
        $._expression,
        optional(field("packing", $.dimension_packing)),
        "]",
      ),

    builtin_type: ($) =>
      choice("void", "bool", "int", "int64", "float", "char"),

    // `void` appears in both styles: new `void Foo()` and old `void:Foo()`.
    block: ($) => seq("{", repeat($._statement), "}"),

    // Statements
    _statement: ($) =>
      choice(
        $.block,
        $.variable_declaration_statement,
        $.old_variable_declaration_statement,
        $.for_statement,
        $.while_statement,
        $.do_while_statement,
        $.break_statement,
        $.continue_statement,
        $.condition_statement,
        $.switch_statement,
        $.return_statement,
        $.delete_statement,
        $.expression_statement,
      ),

    break_statement: ($) => seq("break", optional($._semicolon)),

    continue_statement: ($) => seq("continue", optional($._semicolon)),

    // FIXME: Make this nicer like tree-sitter-c
    expression_statement: ($) =>
      prec.right(
        seq(choice($._expression, $.comma_expression), optional($._semicolon)),
      ),

    return_statement: ($) =>
      prec.right(
        seq(
          "return",
          optional(
            field("expression", choice($._expression, $.comma_expression)),
          ),
          optional($._semicolon),
        ),
      ),

    delete_statement: ($) =>
      prec.right(
        PREC.FREE,
        seq("delete", field("free", $._expression), optional($._semicolon)),
      ),

    _semicolon: ($) => choice($._automatic_semicolon, $._manual_semicolon),

    // Expressions

    _expression: ($) =>
      choice(
        $.assignment_expression,
        $.call_expression,
        $.array_indexed_access,
        $.packed_array_indexed_access,
        $.ternary_expression,
        $.field_access,
        $.scope_access,
        $.binary_expression,
        $.unary_expression,
        $.update_expression,
        $.sizeof_expression,
        $.view_as,
        $.old_type_cast,
        $.identifier,
        $._literal,
        $.parenthesized_expression,
        $.this,
        $.new_expression,
      ),

    // This is needed to resolve ambiguity between symbols and old type casts in case statements.
    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field(
            "left",
            choice(
              $.array_indexed_access,
              $.packed_array_indexed_access,
              $.view_as,
              $.field_access,
              $.scope_access,
              $.identifier,
              $.this,
            ),
          ),
          field(
            "operator",
            choice(
              "=",
              "+=",
              "-=",
              "*=",
              "/=",
              "|=",
              "&=",
              "^=",
              "~=",
              "<<=",
              ">>=",
              ">>>=",
              "%=",
            ),
          ),
          field("right", choice($._expression, $.dynamic_array)),
        ),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("function", choice($.builtin_type, $.identifier, $.field_access)),
          field("arguments", $.call_arguments),
        ),
      ),

    call_arguments: ($) =>
      prec.left(
        -11,
        seq(
          "(",
          commaSep(choice($._expression, $.named_arg, $.ignore_argument)),
          ")",
        ),
      ),

    array_indexed_access: ($) =>
      seq(
        field(
          "array",
          choice($.identifier, $.array_indexed_access, $.field_access),
        ),
        "[",
        field("index", $._expression),
        "]",
      ),

    // https://forums.alliedmods.net/showthread.php?t=90735
    parenthesized_expression: ($) =>
      seq(
        "(",
        field("expression", choice($._expression, $.comma_expression)),
        ")",
      ),

    comma_expression: ($) =>
      seq(
        field("left", $._expression),
        ",",
        field("right", choice($._expression, $.comma_expression)),
      ),

    field_access: ($) =>
      prec.right(
        PREC.FIELD,
        seq(field("target", $._expression), ".", field("field", $.identifier)),
      ),

    binary_expression: ($) => binaryExpression($._expression),

    update_expression: ($) => {
      const argument = field("argument", $._expression);
      const operator = field("operator", choice("--", "++"));
      return prec.right(
        PREC.UNARY,
        choice(seq(operator, argument), seq(argument, operator)),
      );
    },

    view_as: ($) =>
      seq(
        "view_as",
        "<",
        field("type", $.type),
        ">",
        "(",
        field("value", $._expression),
        ")",
      ),

    int_literal: ($) => {
      const separator = "_";
      const hex = /[0-9a-fA-F]/;
      const octo = /[o0-7]/;
      const decimal = /[0-9]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const octoDigits = seq(
        repeat1(octo),
        repeat(seq(separator, repeat1(octo))),
      );
      const decimalDigits = seq(
        repeat1(decimal),
        repeat(seq(separator, repeat1(decimal))),
      );
      return token(
        seq(
          choice(
            decimalDigits,
            seq("0b", decimalDigits),
            seq("0x", hexDigits),
            seq("0o", octoDigits),
          ),
          optional(seq(/[eEpP]/, optional(seq(optional(/[-\+]/), hexDigits)))),
        ),
      );
    },

    bool_literal: ($) => token(choice("true", "false")),

    this: ($) => "this",
