test/corpus/delete.txt
======
delete
======

void SaveClose(Handle myhandle) {
    delete myhandle;
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (parameter_type
          (type
            (symbol)
          )
        )
        name: (symbol)
      )
    )
    body: (block
      (delete_statement
        free: (symbol)
      )
    )
  )
)


===========================
delete - index array access
===========================

void SaveClose(Handle[] myhandle) {
    delete myhandle[0];
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (parameter_type
          (type
            (symbol)
          )
          (dimension)
        )
        name: (symbol)
      )
    )
    body: (block
      (delete_statement
        free: (array_indexed_access
          array: (symbol)
          index: (int_literal)
        )
      )
    )
  )
)


================
delete - view as
================

void SaveClose(Handle myhandle) {
    delete view_as<DataPack>(myhandle);
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (parameter_type
          (type
            (symbol)
          )
        )
        name: (symbol)
      )
    )
    body: (block
      (delete_statement
        free: (view_as
          type: (type
            (symbol)
          )
          value: (symbol)
        )
      )
    )
  )
)


=============
delete - this
=============

methodmap Handle
{
  public void Dispose() {
      delete this;
  }
}

---

(source_file
  (methodmap
    name: (symbol)
    (methodmap_method
      returnType: (type
        (builtin_type)
      )
      name: (symbol)
      (parameter_declarations)
      body: (block
        (delete_statement
          free: (this)
        )
      )
    )
  )
)


=====================
delete - field access
=====================

methodmap Handle
{
  public void Dispose() {
      delete this.garbage;
  }
}

---

(source_file
  (methodmap
    name: (symbol)
    (methodmap_method
      returnType: (type
        (builtin_type)
      )
      name: (symbol)
      (parameter_declarations)
      body: (block
        (delete_statement
          free: (field_access
            target: (this)
            field: (symbol)
          )
        )
      )
    )
  )
)


======================
delete - function call
======================

methodmap Handle
{
  public void Dispose() {
      delete GetHandle();
  }
}

---

(source_file
  (methodmap
    name: (symbol)
    (methodmap_method
      returnType: (type
        (builtin_type)
      )
      name: (symbol)
      (parameter_declarations)
      body: (block
        (delete_statement
          free: (call_expression
            function: (symbol)
            arguments: (call_arguments)
          )
        )
      )
    )
  )
)
