test/corpus/do_while_loop.txt
=============
do while loop
=============

public void OnPluginStart() {
    do {
    } while(true);
}

---

(source_file
    (function_declaration
        (function_visibility)
        returnType: (type (builtin_type))
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (do_while_loop
                (block)
                condition: (bool_literal)
                (semicolon)))))


=======================================
do while loop - expression as condition
=======================================

public void OnPluginStart() {
    do {
    } while(20 > 10);
}

---

(source_file
    (function_declaration
        (function_visibility)
        returnType: (type (builtin_type))
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (do_while_loop
                (block)
                condition: (binary_expression
                    left: (int_literal)
                    right: (int_literal))
                (semicolon)))))


=====================
do while loop - break
=====================

public void OnPluginStart() {
    do {
        break;
    } while(true);
}

---

(source_file
    (function_declaration
        (function_visibility)
        returnType: (type (builtin_type))
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (do_while_loop
                (block (break_statement (semicolon)))
                condition: (bool_literal)
                (semicolon)))))


========================
do while loop - continue
========================

public void OnPluginStart() {
    do {
        continue;
    } while(true);
}

---

(source_file
    (function_declaration
        (function_visibility)
        returnType: (type (builtin_type))
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (do_while_loop
                (block (continue_statement (semicolon)))
                condition: (bool_literal)
                (semicolon)))))


==================================
do while loop - optional semicolon
==================================

public void OnPluginStart() {
    do {
        continue;
    } while(true)
}

---

(source_file
    (function_declaration
        (function_visibility)
        returnType: (type (builtin_type))
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (do_while_loop
                (block (continue_statement (semicolon)))
                condition: (bool_literal)))))
