test/corpus/enum.txt
===========
simple enum
===========

enum NumberType
{
    NumberType_Int8,
    NumberType_Int16,
    NumberType_Int32
}

---

(source_file
    (enum
        name: (symbol)
        (enum_entries
            (enum_entry name: (symbol))
            (enum_entry name: (symbol))
            (enum_entry name: (symbol)))))


=====================
enum with start value
=====================

enum NumberType
{
    NumberType_Int8 = 1,
    NumberType_Int16,
    NumberType_Int32
}

---

(source_file
    (enum
        name: (symbol)
        (enum_entries
            (enum_entry name: (symbol) value: (int_literal))
            (enum_entry name: (symbol))
            (enum_entry name: (symbol)))))


=========================
enum with explicit values
=========================

enum NumberType
{
    NumberType_Int8 = 8,
    NumberType_Int16 = 16,
    NumberType_Int32 = 32
}

---

(source_file
    (enum
        name: (symbol)
        (enum_entries
            (enum_entry name: (symbol) value: (int_literal))
            (enum_entry name: (symbol) value: (int_literal))
            (enum_entry name: (symbol) value: (int_literal)))))


============================
enum with binary expressions
============================

enum NumberType
{
    NumberType_Int8 = (1<<4),
    NumberType_Int16 = 1<<5,
    NumberType_Int32 = 31 + 1
}

---

(source_file
    (enum
        name: (symbol)
        (enum_entries
            (enum_entry
                name: (symbol)
                value: (parenthesized_expression
                    (binary_expression
                        left: (int_literal)
                        right: (int_literal))))
            (enum_entry
                name: (symbol)
                value: (binary_expression
                    left: (int_literal)
                    right: (int_literal)))
            (enum_entry
                name: (symbol)
                value: (binary_expression
                    left: (int_literal)
                    right: (int_literal))))))


==============
anonymous enum
==============

enum
{
    Int8,
    Int16,
    Int32
}

---

(source_file
    (enum
        (enum_entries
            (enum_entry name: (symbol))
            (enum_entry name: (symbol))
            (enum_entry name: (symbol)))))


=========================
enum with trailing commas
=========================

enum NumberType
{
    NumberType_Int8,
    NumberType_Int16,
    NumberType_Int32,
}

---

(source_file
    (enum
        name: (symbol)
        (enum_entries
            (enum_entry name: (symbol))
            (enum_entry name: (symbol))
            (enum_entry name: (symbol)))))


=========================
enum - optional semicolon
=========================

enum f_invulnmode {
    INVULNMODE_MORTAL,
};

---

(source_file
    (enum
        name: (symbol)
        (enum_entries (enum_entry name: (symbol)))
        (semicolon)))


======================
enum with type casting
======================

enum ChatColorInfo
{
	ChatColorInfo_Code,
	ChatColorInfo_Alternative,
	bool:ChatColorInfo_Supported,
	ChatColorSubjectType:ChatColorInfo_SubjectType
};

---

(source_file
    (enum
        name: (symbol)
        (enum_entries (enum_entry name: (symbol)))
        (semicolon)))
