test/corpus/enum_struct.txt
===========
enum struct
===========

enum struct MyStruct
{
    int a;
    float b;
    char c;
    bool d;
    char e[64];
    Action action;
}

---

(source_file
    (enum_struct
        name: (symbol)
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (fixed_dimension (int_literal))
            (semicolon))
        (enum_struct_field
            type: (symbol)
            name: (symbol)
            (semicolon))))


====================
enum struct - method
====================

enum struct Rectangle
{
    int width;
    int height;

    int Area() {
        return this.width * this.height;
    }
}

---

(source_file
    (enum_struct
        name: (symbol)
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))

        (enum_struct_method
            returnType: (type (builtin_type))
            name: (symbol)
            (argument_declarations)
            (block
                (return_statement
                    (binary_expression
                        left: (field_access
                            target: (this)
                            field: (symbol))
                        right: (field_access
                            target: (this)
                            field: (symbol)))
                    (semicolon))))))


====================================
enum struct - method with parameters
====================================

enum struct Rectangle
{
    int width;
    int height;

    bool CoversArea(const Rectangle r) {
        return r.width <= this.width && r.height <= this.height;
    }
}

---

(source_file
    (enum_struct
        name: (symbol)
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))

        (enum_struct_method
            returnType: (type (builtin_type))
            name: (symbol)
            (argument_declarations
                (argument_declaration
                    type: (type (symbol))
                    name: (symbol)))
            (block
                (return_statement
                    (binary_expression
                        left: (binary_expression
                            left: (field_access
                                target: (symbol)
                                field: (symbol))
                            right: (field_access
                                target: (this)
                                field: (symbol)))
                        right: (binary_expression
                            left: (field_access
                                target: (symbol)
                                field: (symbol))
                            right: (field_access
                                target: (this)
                                field: (symbol))))
                    (semicolon))))))
