test/corpus/field_access.txt
==========================
field access from variable
==========================

void Test() {
    a.member;
}

---

(source_file
    (function_declaration
        returnType: (builtin_type)
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (expression_statement
                (field_access
                    target: (symbol)
                    field: (symbol))
                (semicolon)))))


======================
field access from this
======================

enum struct Rectangle
{
    int width;

    int GetWidth() {
        return this.width;
    }
}

---

(source_file
    (enum_struct
        name: (symbol)
        (enum_struct_field
            type: (builtin_type)
            name: (symbol)
            (semicolon))

        (enum_struct_method
            returnType: (builtin_type)
            name: (symbol)
            (argument_declarations)
            (block
                (return_statement
                    (field_access
                        target: (this)
                        field: (symbol))
                    (semicolon))))))


======================================
field access from indexed array access
======================================

void Test() {
    things[0].member;
}

---

(source_file
    (function_declaration
        returnType: (builtin_type)
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (expression_statement
                (field_access
                    target: (array_indexed_access
                        array: (symbol)
                        index: (int_literal))
                    field: (symbol))
                (semicolon)))))


===============================
field access from function call
===============================

void Test() {
    CreateInstance().member;
}

---

(source_file
    (function_declaration
        returnType: (builtin_type)
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (expression_statement
                (field_access
                    target: (function_call
                        function: (symbol)
                        (function_call_arguments))
                    field: (symbol))
                (semicolon)))))
